# uurs24

./: Cargo.toml  README.md  WEB_INTERFACE_README.md
data/: boeien.csv  polars.csv  rakken.csv  starts.csv  wind.csv  zeiten.csv
src/: data.rs  main.rs  optimize.rs  plot.rs  server.rs
templates/: base.html  estimate-leg.html  estimate.html  find-paths.html  find-target.html  index.html
