[package]
name = "uurs24"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.45"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3.1"
petgraph = { version = "0.8.2", features = ["serde", "serde_derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = "0.18.0"
tera = "1.19"
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
mime_guess = "2.0"
